# cppcistack

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: Project.hpp
src/: Project.cpp  main.cpp
test/: unit_project.cpp
